# MarkLogic

./: .gitignore  README.md  ZPROGRESS.txt  Zoriginal_Code.txt  admin-menu.html  admin.html  admin.js  adminNull.html  admin_Backup.html  app.py  app_Backup.py  build_dataset.py  check_logo.py  client-dataset.html  client-dataset.js  compare-modified.html  compare.html  compare.js  convert_pdf.py  database.py  dataset.html  dataset.js  detect_logo.py  export_model.py  hash_pass.py  index.html  main.py  marklogic.js  menu.html  merge_dataset.py  ml_utils.py  password.html  password.js  pdf_extractor.py  pdf_extractor_backup.py  pyproject.toml  requirements.txt  search.html  search_Backup.html  sign-in.js  (+10 more)
runs/detect/train/: args.yaml
runs/detect/train10/: args.yaml  results.csv
runs/detect/train11/: args.yaml  results.csv
runs/detect/train12/: args.yaml
runs/detect/train13/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml
runs/detect/train6/: args.yaml  results.csv
runs/detect/train7/: args.yaml
runs/detect/train8/: args.yaml  results.csv
runs/detect/train9/: args.yaml  results.csv
static/: admin.js  client-dataset.js  compare.js  dataset.js  datepicker.js  logout.js  password.js  search.js  search_Backup.js  sign-in.js  style.css  style_backup.css  user_management.js  utils.js
templates/: admin-menu.html  admin.html  change_password.html  client-dataset.html  compare.html  dataset.html  index.html  menu.html  search.html  search_Backup.html  signin.html  user_management.html
yolo_project/: README.md  auto_label.py  detect_logo.py  logo_dataset.yaml  requirements.txt  train_logo.py
