[project]
name = "marklogic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc==0.0.4",
    "anyio==4.12.1",
    "blinker==1.9.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "clip",
    "colorama==0.4.6",
    "faiss-cpu==1.7.3",
    "filelock==3.20.0",
    "flask==3.1.3",
    "flask-mail==0.10.0",
    "fsspec==2025.10.0",
    "ftfy>=6.3.1",
    "h11==0.16.0",
    "hf-xet==1.3.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.5.0",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==1.*",
    "packaging==25.0",
    "pdfplumber>=0.11.9",
    "pillow==9.4.0",
    "psycopg2-binary==2.9.5",
    "pygments==2.19.2",
    "pymupdf==1.21.1",
    "python-dotenv>=1.2.2",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "reportlab>=4.4.10",
    "rich==14.3.3",
    "safetensors==0.6.2",
    "scikit-learn==1.8.0",
    "scipy==1.15.3",
    "sentence-transformers==5.2.3",
    "sentencepiece==0.2.1",
    "shellingham==1.5.4",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch>=2.10.0",
    "tqdm==4.67.1",
    "transformers==5.2.0",
    "typer==0.24.1",
    "typer-slim==0.24.0",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "werkzeug==3.1.3",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
