[project]
name = "marklogic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu==1.12.0",
    "fitz==0.0.1.dev2",
    "flask==3.1.3",
    "flask-mail==0.10.0",
    "imagehash==4.3.2",
    "numpy==2.4.3",
    "opencv-python==4.11.0.86",
    "pandas==3.0.1",
    "pdfplumber==0.11.1",
    "pillow==12.1.1",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.2.2",
    "reportlab==4.2.0",
    "scipy==1.17.1",
    "sentence-transformers==5.1.1",
    "tqdm==4.65.0",
    "ultralytics==8.4.21",
    "werkzeug==3.1.7",
]
